--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -6,7 +6,9 @@
 <mat-sidenav-container class="sidenav-container">
 
     <!-- Side Drawer for Student Details -->
-    <mat-sidenav #drawer mode="over" position="end" class="student-drawer">
+    <mat-sidenav #drawer mode="over" position="end" class="student-drawer" (mousedown)="onDrawerInteractionStart()"
+        (mouseup)="onDrawerInteractionEnd()" (touchstart)="onDrawerInteractionStart()"
+        (touchend)="onDrawerInteractionEnd()">
         <div class="flex-row center-row">
             <div class="flex-row center-row back" (click)="closeDrawer()">
                 <mat-icon>arrow_back_ios_new</mat-icon>Назад
@@ -43,7 +45,7 @@
                 <div class="flex-col flex-grow">
                     <label>telegram:</label>
                     <a target="_blank" href="{{ getTelegramLink(selectedUser()?.telegram) }}">
-                        <input class="no-pointer-events flex-grow" type="text" formControlName="telegram" readonly>
+                        <input class="no-pointer-events flex-grow smol" type="text" formControlName="telegram" readonly>
                     </a>
                 </div>
             </div>
