--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -72,7 +72,7 @@
 
         <ul class="flex-col background">
             <li>Имею более 5 лет опыта преподавания вокала.</li>
-            <li>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2022 году.</li>
+            <li>Основала собственную студию ΣΙΓΜΑ в 2022 году.</li>
             <li>За время своей практики обучила более 100 учеников самых разных уровней.</li>
             <li>Владею несколькими музыкальными инструментами: пианино, гитара, скрипка, укулеле, барабаны, гармошка,
                 варган.</li>
