--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -109,6 +109,13 @@
                             <img [src]="image.image" [alt]="image.title" loading="lazy" class="w-h-100 thumbnail-image">
                         </div>
                     </div>
+
+                    <!-- <div class="flex-row center-all swiper-button-prev swiper-button-prev-thumbs">
+                        <mat-icon>arrow_back_ios_new</mat-icon>
+                    </div>
+                    <div class="flex-row center-all swiper-button-next swiper-button-next-thumbs">
+                        <mat-icon>arrow_forward_ios_new</mat-icon>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -160,6 +167,13 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- <div class="flex-row center-all swiper-button-prev swiper-button-prev-reviews">
+                        <mat-icon>arrow_back_ios_new</mat-icon>
+                    </div>
+                    <div class="flex-row center-all swiper-button-next swiper-button-next-reviews">
+                        <mat-icon>arrow_forward_ios_new</mat-icon>
+                    </div> -->
                 </div>
             </div>
         </div>
