login form fix; header img fix; user page img fix

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -231,7 +231,7 @@ mat-toolbar {
         padding: 8px;
 
         img {
-            border-radius: 50%;
+            border-radius: 4px;
             height: inherit;
             aspect-ratio: 1 / 1;
             transition: filter 0.3s ease;
