--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -158,7 +158,7 @@
             Или запишитесь на занятие через
             <!-- Or sign up for a class via the -->
         </span>
-        <span class="form-footer__bot">
+        <span class="form-footer__bot" (click)="telegramBotStart()">
             Telegram бота
             <!-- Telegram bot -->
         </span>
