--- a/src/app/components/admin-timeline/admin-timeline.component.scss
+++ b/src/app/components/admin-timeline/admin-timeline.component.scss
@@ -36,6 +36,10 @@ mat-form-field {
     min-height: unset !important;
 }
 
+// .form-group {
+//     height: 55px;
+// }
+
 .display-box {
     border-radius: 4px;
     padding: 10px;
@@ -70,6 +74,7 @@ mat-form-field {
         font-family: "Didact Gothic", sans-serif;
         font-size: 16px;
         flex-grow: 1;
+        height: 38.4px;
     }
 
     .relative {
