--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -126,7 +126,7 @@
                         'my-classes__status_pending': class.status === ClassStatus.Pending,
                         'my-classes__status_executed': class.status === ClassStatus.Executed,
                     }" class="my-classes__status">
-                        Status: {{ class.status }}
+                        Статус: {{ class.status }}
                     </p>
                     <mat-divider></mat-divider>
                     <div class="flex-row my-classes__time">
