--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -161,3 +161,18 @@ mat-divider {
         }
     }
 }
+
+.mobile {
+    display: none !important;
+}
+
+@media (max-width: 768px) {
+
+    .mobile {
+        display: flex !important;
+    }
+
+    .desktop {
+        display: none;
+    }
+}
