Sigma v0.95: TG bot linked

--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -158,9 +158,10 @@
             Или запишитесь на занятие через
             <!-- Or sign up for a class via the -->
         </span>
-        <span class="form-footer__bot" (click)="telegramBotStart()">
+        <a target="_blank" href="https://t.me/sigma_vocal_bot" class="form-footer__bot">
             Telegram бота
             <!-- Telegram bot -->
-        </span>
+            <span class="form-footer__beta">β</span>
+        </a>
     </div>
 </div>
