--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -150,6 +150,7 @@ mat-label {
     font-size: 20px;
 
     &__bot {
+        position: relative;
         font-weight: 600;
         cursor: pointer;
         transition:
@@ -160,6 +161,13 @@ mat-label {
             transform: scale(1.1);
             color: var(--brand-color);
         }
+    }
+
+    &__beta {
+        position: absolute;
+        top: -2px;
+        right: -12px;
+        font-size: 14px;
     }
 
 }
