telegram username handling between web interface and telegram bot

--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -58,21 +58,22 @@
                 <div class="flex-row center-row contact-info email">
                     <label class="label">e-mail:</label>
                     <input class="input" type="text" [(ngModel)]="userData.email" [readonly]="!isUserDataEditing"
-                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()"/>
+                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()" />
                 </div>
                 <!-- Empty (Top-right sector) -->
                 <div class="empty-sector"></div>
                 <!-- Telegram (Bottom-left sector) -->
                 <div class="flex-row center-row contact-info telegram">
                     <label class="label">telegram:</label>
-                    <input class="input" type="text" [(ngModel)]="userData.telegram" [readonly]="!isUserDataEditing"
-                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()"/>
+                    <input class="input" type="text" [(ngModel)]="displayedTelegram" [readonly]="!isUserDataEditing"
+                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()" placeholder="@username"
+                    />
                 </div>
                 <!-- Phone (Bottom-right sector) -->
                 <div class="flex-row center-row contact-info phone">
                     <label class="label">телефон:</label>
                     <input class="input" type="text" [(ngModel)]="userData.phone" [readonly]="!isUserDataEditing"
-                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()"/>
+                        [ngClass]="{ 'editable': isUserDataEditing }" (dblclick)="toggleEdit()" />
                 </div>
             </div>
 
