--- a/src/app/components/social-media/social-media.component.html
+++ b/src/app/components/social-media/social-media.component.html
@@ -1,18 +1,18 @@
 <div class="flex-row center-row w-h-100 social">
     <!-- telegram -->
-    <a target="_blank" href="https://t.me/beige_soy_normis">
+    <a target="_blank" href="https://t.me/osmium_tetroxide">
         <img class="social__item" alt="Telegram"
             src="https://res.cloudinary.com/dxunxtt1u/image/upload/telegram-green-200_w3bcjl.png">
     </a>
 
     <!-- VK -->
-    <a target="_blank" href="https://vk.com/sonya_panteleeva">
+    <a target="_blank" href="https://vk.com/id807000590">
         <img class="social__item" alt="VK"
             src="https://res.cloudinary.com/dxunxtt1u/image/upload/vk-green-128_iczdzm.png">
     </a>
 
     <!-- Instagram -->
-    <a target="_blank" href="https://www.instagram.com/strawberry_lemon_cheesecake">
+    <a target="_blank" href="https://www.instagram.com/osmium_tetroxide">
         <img class="social__item" alt="Instagram"
             src="https://res.cloudinary.com/dxunxtt1u/image/upload/instagram-green-182_e053cj.png">
     </a>
