--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -23,7 +23,7 @@
 
         <div class="flex-col center-row mid-col">
             <div class="flex-col w-100 title">
-                <h2 class="name">Софья Пантелеева</h2>
+                <h2 class="name">[Tutor's name]</h2>
                 <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
             </div>
             <ul class="flex-col background">
@@ -46,7 +46,7 @@
     <!-- Mobile version -->
     <div class="flex-col center-row w-100 content-mobile">
         <div class="flex-col w-100 title">
-            <h2 class="name">Софья Пантелеева</h2>
+            <h2 class="name">[Tutor's name]</h2>
             <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
         </div>
 
