--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -11,8 +11,8 @@
 
             <div class="flex-col">
                 <h4>Адрес:</h4>
-                <span>196105, г. Санкт-Петербург,</span>
-                <span>Свеаборгская улица, дом 10</span>
+                <span>123456, г. Санкт-Петербург,</span>
+                <span>Московская улица, дом 10</span>
 
                 <h4>Телефон:</h4>
                 <span>+ 0 (123) 456-789</span>
